feature fill square.